Thank MIJ for Bertsimas paper

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -861,6 +861,7 @@ and thus the symmetry-aware map,
 requires more than an hour, \ie orders of magnitude more time, to complete (thick lines).
 
 \subsection{Algorithmic Speedup}
+\label{sec:speedup}
 
 \begin{table}[t!]
 \centering
