CORELS not our approach in table

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -869,10 +869,10 @@ requires more than an hour, \ie orders of magnitude more time, to complete (thic
 & Max evaluated & Lower bound & Predicted&runtime \\
 & prefix length & evaluations & \\
 \hline
-Our approach & 5  & $ 2.8 \times 10^7$ & &$36$ seconds \\
+CORELS & 5  & $ 2.8 \times 10^7$ & &$36$ seconds \\
 Brute force & 5 & ~$2.5 \times 10^{10}$ & $3.3 \times 10^4$ s =&$9.0$ hours \\
 Brute force & 10 & ~$5.0 \times 10^{20}$ & $6.5 \times 10^{14}$ s =&$21$ million years \\
-Our approach (1984) & 5 & $2.8 \times 10^7$ & $1.2 \times 10^6$ s =&$13.5$ days \\
+CORELS (1984) & 5 & $2.8 \times 10^7$ & $1.2 \times 10^6$ s =&$13.5$ days \\
 \end{tabular}
 \caption{Algorithmic Speedup for ProPublica dataset (${\Reg = 0.005}$, ${M = 122}$).
 %
