Minor edits to speedup table

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -866,15 +866,15 @@ requires more than an hour, \ie orders of magnitude more time, to complete (thic
 \begin{table}[t!]
 \centering
 \begin{tabular}{l|c|c|r l}
-& Max evaluated & Lower bound & Predicted&runtime \\
-& prefix length & evaluations & \\
+Algorithmic & Max evaluated & Lower bound & Predicted&runtime \\
+approach & prefix length & evaluations & \\
 \hline
 CORELS & 5  & $ 2.8 \times 10^7$ & &$36$ seconds \\
 Brute force & 5 & ~$2.5 \times 10^{10}$ & $3.3 \times 10^4$ s =&$9.0$ hours \\
 Brute force & 10 & ~$5.0 \times 10^{20}$ & $6.5 \times 10^{14}$ s =&$21$ million years \\
 CORELS (1984) & 5 & $2.8 \times 10^7$ & $1.2 \times 10^6$ s =&$13.5$ days \\
 \end{tabular}
-\caption{Algorithmic Speedup for ProPublica dataset (${\Reg = 0.005}$, ${M = 122}$).
+\caption{Algorithmic speedup for the ProPublica dataset (${\Reg = 0.005}$, ${M = 122}$).
 %
 Solving this problem using brute force is impractical due to the inability to explore rule lists of reasonable lengths.
 %
