Minor layout edit

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -850,7 +850,7 @@ a separate execution of CORELS without the equivalent points bound
 %
 After more than 2 hours, the execution is still far from complete;
 in particular, the lower bound is far from the optimum objective value (top)
-and much of the search space remains unexplored (bottom).
+and much of the search space remains unexplored~(bottom).
 %
 For the NYCLU stop-and-frisk dataset (right),
 CORELS achieves the optimum objective in well under a second,
